2008-04-06  Jason Rumney  <jasonr@gnu.org>

	* w32uniscribe.c (uniscribe_shape): Increase items buffer size.
	Give up if glyph indices not supported.  Use uniscribe obtained
	ABC widths for individual metrics.  Map glyph clusters back to
	characters using fClusterStart flag.  Return number of glyphs
	produced, not chars processed.

2008-04-05  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* macmenu.c (fill_menu) [TARGET_API_MAC_CARBON]: Use
	SetMenuItemHierarchicalMenu.

2008-04-05  Jason Rumney  <jasonr@gnu.org>

	* image.c (pbm_load): Allow color values up to 65535.
	Throw an error if max_color_idx is outside the supported range.
	Report an error when image size is invalid.
	Read two bytes at a time when raw images have max_color_idx above 255.

2008-04-05  Eli Zaretskii  <eliz@gnu.org>

	* w32.c (readdir): If FindFirstFile/FindNextFile return in
	cFileName a file name that includes `?' characters, use the 8+3
	alias in cAlternateFileName instead.

2008-04-05  Kenichi Handa  <handa@ni.aist.go.jp>

	* ccl.c (ccl_driver): If ccl->quit_silently is nonzero, don't
	append "CCL: Quitted" when the CCL program is quitted.
	(setup_ccl_program): Initialize ccl->quit_silently to zero.

	* ccl.h (struct ccl_program): New member quit_silently.

2008-04-05  Chong Yidong  <cyd@stupidchicken.com>

	* search.c (compile_pattern_1): Treat non-nil and non-string of
	search-spaces-regexp as nil.

	* minibuf.c (Fassoc_string): Tweak docstring.

2008-04-05  Eli Zaretskii  <eliz@gnu.org>

	* dired.c (Ffile_attributes): Support inode numbers wider than 32
	bits.  Remove ugly WINDOWSNT-specific kludge introduced on
	2008-03-14 to force inode be positive.

	* w32.c (sys_chown, stat, fstat): Use S_* constants instead of
	_S_* ones, since we now use our own sys/stat.h.
	(stat, fstat): Don't mangle the inode number.
	(init_user_info): Don't restrict UID and GID to 0-60000 range.

2008-04-04  Stefan Monnier  <monnier@iro.umontreal.ca>
